#66728 - Upgrade from Java 17 LTS to Java 25 LTS